# FlowStructNet

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.lock.txt  requirements.txt
flowstructnet/: __init__.py  convert.py  eval_flowstructnet_metrics.py  train_flowstructnet_classifier.py
scripts/: convert_example.sh
